--- a/package.json
+++ b/package.json
@@ -9,18 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@types/styled-components": "^5.1.34",
     "apexcharts": "^3.45.2",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "formik": "^2.4.6",
+    "framer-motion": "^12.0.8",
     "jsvectormap": "^1.6.0",
+    "jwt-decode": "^4.0.0",
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18"
+    "react-circular-progressbar": "^2.1.0",
+    "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^7.6.0",
+    "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "react-select": "^5.9.0",
+    "react-table": "^7.8.0",
+    "react-toastify": "^11.0.2",
+    "reselect": "^5.1.1",
+    "styled-components": "^6.1.13",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-table": "^7.7.20",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
